--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 Hey thanks for visiting!
 Adding more content soon...
 5 Ways to Prepare for a Recession: https://www.equifax.com/personal/education/personal-finance/five-ways-to-prepare-for-a-recession/
+just see this thing
