--- a/index.html
+++ b/index.html
@@ -1,4 +1,2 @@
-Hey thanks for visiting!
-Adding more content soon...
-5 Ways to Prepare for a Recession: https://www.equifax.com/personal/education/personal-finance/five-ways-to-prepare-for-a-recession/
-just see this thing
+<BR> Hey thanks for visiting! </BR>
+Adding more content soon....
