--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <BR> Hey thanks for visiting! </BR>
+<BR> 5 Ways to Prepare for a Recession: <a> Click here </a> <a href="https://www.equifax.com/personal/education/personal-finance/five-ways-to-prepare-for-a-recession/"> </BR>
 Adding more content soon....
