--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <BR> Hey thanks for visiting! </BR>
 <BR> 5 Ways to Prepare for a Recession: <a href="https://www.equifax.com/personal/education/personal-finance/five-ways-to-prepare-for-a-recession/"> Click here </a> </BR>
-Adding more content soon....
+<BR> Adding more content soon.... </BR>
